<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	>

	<include layout="@layout/toolbar"/>

	<FrameLayout
		android:id="@+id/main_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		>
		<LinearLayout
			android:layout_width="220dp"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="40dp"
			android:layout_gravity="center"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end|center_vertical"
				android:gravity="end|center_vertical"
				android:text="@string/add_card_title"
				android:textSize="22sp"
				android:textStyle="bold|italic"
				android:textColor="@color/cyan_800"
				android:layout_marginBottom="20sp"
				/>
			<TextView
				style="@style/TextView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/card_number"
				/>
			<EditText
				android:id="@+id/card_pan"
				style="@style/EditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:inputType="number"
				android:maxLength="19"
				android:text="@string/dummy_pan"
				/>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:orientation="horizontal"
				>
				<TextView
					style="@style/TextView"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="start|center_vertical"
					android:text="@string/expiry_date"
					/>
				<EditText
					android:id="@+id/card_expiry_month"
					style="@style/EditText"
					android:layout_width="40dp"
					android:layout_height="wrap_content"
					android:inputType="number"
					android:maxLength="2"
					android:text="@string/expiry_month"
					/>
				<TextView
					style="@style/TextView"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="start|center_vertical"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:text="@string/expiry_divider"
					/>
				<EditText
					android:id="@+id/card_expiry_year"
					style="@style/EditText"
					android:layout_width="40dp"
					android:layout_height="wrap_content"
					android:inputType="number"
					android:maxLength="2"
					android:text="@string/expiry_year"
					/>
			</LinearLayout>

			<TextView
				style="@style/TextView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/cardholder_name"
				/>

			<EditText
				android:id="@+id/card_holder_name"
				style="@style/EditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:inputType="textPersonName"
				android:maxLength="32"
				android:text="@string/dummy_name"
				/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:orientation="horizontal"
				>
				<TextView
					style="@style/TextView"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="start|center_vertical"
					android:text="@string/cvc"
					/>
				<EditText
					android:id="@+id/card_cvc"
					style="@style/EditText"
					android:layout_width="50dp"
					android:layout_height="wrap_content"
					android:inputType="number"
					android:maxLength="3"
					android:text="@string/dummy_cvc"
					/>
			</LinearLayout>

			<Button
				style="@style/Button"
				android:id="@+id/add_card_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/add_card_button"
				/>

			<TextView
				android:id="@+id/message"
				style="@style/TextView"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginTop="32dp"
				android:textColor="@color/red"
				android:gravity="center"
				android:visibility="invisible"
				/>

		</LinearLayout>
	</FrameLayout>

</LinearLayout>
