<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:transitionName="card">

            <com.mastercard.mpsdksample.mpausingwul.view.WalletCardView
                android:id="@+id/carddetail_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/carddetail_cardtokens"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:paddingLeft="16dp"
                    android:text=""
                    android:textColor="@color/bluegrey_400"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/carddetail_cardstate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingRight="16dp"
                    android:text=""
                    android:textColor="@color/bluegrey_400"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>

        <View style="@style/DividerHorizontal"
              android:layout_marginLeft="24dp"
              android:layout_marginRight="24dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/transaction_log_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:text="@string/no_transactions"
                android:textColor="@color/bluegrey_300"
                android:textSize="16sp"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/transaction_log_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="false"
                android:scrollbarThumbVertical="@drawable/shape_scrollbar"
                android:scrollbars="vertical"
                android:visibility="visible"/>

        </FrameLayout>
        <Button
            android:id="@+id/carddetail_qrc_button"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/pay_qrc_button"/>

        <Button
            android:id="@+id/carddetail_pay_button"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/pay_now_button"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>