<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019, MasterCard International Incorporated and/or its affiliates. All rights reserved.
  ~
  ~ The contents of this file may only be used subject to the MasterCard Mobile Payment SDK for MCBP and/or MasterCard Mobile MPP UI SDK Materials License.
  ~
  ~ Please refer to the file LICENSE.TXT for full details.
  ~
  ~ TO THE EXTENT PERMITTED BY LAW, THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. TO THE EXTENT PERMITTED BY LAW, IN NO EVENT SHALL MASTERCARD OR ITS AFFILIATES BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_account_balance_wallet"
            android:drawablePadding="8dp"
            android:layout_marginBottom="10dp"
            android:gravity="start|center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/cyan_800"
            android:textSize="22sp"
            android:textStyle="bold|italic"
            />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/bluegrey_300"
            android:textSize="14sp"
            android:typeface="monospace"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/bluegrey_50"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="4dp"
            >
            <TextView
                android:id="@+id/about_flavor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bluegrey_400"
                android:textSize="14sp"
                android:typeface="monospace"
                />
            <TextView
                android:id="@+id/about_auth_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bluegrey_400"
                android:textSize="14sp"
                android:typeface="monospace"
                />
            <TextView
                android:id="@+id/about_cdcvm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bluegrey_400"
                android:textSize="14sp"
                android:typeface="monospace"
                />
            <TextView
                android:id="@+id/about_validation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bluegrey_400"
                android:textSize="14sp"
                android:typeface="monospace"
                />
            <TextView
                android:id="@+id/about_instance_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bluegrey_400"
                android:textSize="14sp"
                android:typeface="monospace"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/about_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_main_text"
            android:textColor="@color/bluegrey_500"
            android:textSize="13sp"
            android:typeface="monospace"
            />

        <TextView
            android:id="@+id/about_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_email"
            android:textColor="@color/cyan_600"
            android:textSize="15sp"
            android:typeface="monospace"
            />

    </LinearLayout>

</ScrollView>
